--- a/Creatives/css/main.css
+++ b/Creatives/css/main.css
@@ -657,16 +657,18 @@ body {
     padding: 2rem 1.5rem;
   }
   .third-block__row {
-    flex-wrap: wrap;
     flex-direction: column;
   }
-  .third-block__img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: static;
-    top: 0;
-    right: 0;
+  .third-block__artical {
+    flex: 1 1 auto;
+  }
+  .third-block__left_side {
+    justify-content: center;
+    padding-right: 0;
+  }
+  .third-block__right_side {
+    justify-content: center;
+    padding-left: 0;
   }
   .third-block .light-block {
     flex-direction: column-reverse;
