--- a/Greenshop/css/main.css
+++ b/Greenshop/css/main.css
@@ -1324,12 +1324,12 @@ body {
   }
   .header__nav {
     width: 50%;
-    overflow: auto;
+    overflow-y: auto;
     min-width: 300px;
-    padding: 29px 10px 0 10px;
+    padding: 29px 10px;
     background-color: #FBFBFB;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
   }
   .header__nav.active {
     left: 0;
@@ -1355,11 +1355,8 @@ body {
   .header__link {
     color: #3d8c4c;
     display: block;
-    padding: 25px 10px;
+    padding: 15px 10px;
     font-size: 20px;
-  }
-  .header__link-active {
-    padding: 25px 10px;
   }
   .header__link:hover {
     -webkit-box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.3), 0 0 0 1px rgba(0, 0, 0, 0.05);
