--- a/Greenshop/css/main.css
+++ b/Greenshop/css/main.css
@@ -1324,8 +1324,7 @@ body {
   }
   .header__nav {
     width: 50%;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
+    overflow-y: auto;
     min-width: 300px;
     padding: 29px 10px;
     background-color: #FBFBFB;
@@ -1333,6 +1332,7 @@ body {
     transition: all 0.4s ease-in-out;
   }
   .header__nav.active {
+    height: 100vh;
     left: 0;
   }
   .header .header__logo-nav {
