--- a/Greenshop/css/main.css
+++ b/Greenshop/css/main.css
@@ -1333,7 +1333,7 @@ body {
     transition: all 0.4s ease-in-out;
   }
   .header__nav.active {
-    height: 100vh;
+    height: 140%;
     left: 0;
   }
   .header .header__logo-nav {
