--- a/Greenshop/css/main.css
+++ b/Greenshop/css/main.css
@@ -1587,7 +1587,6 @@ body {
     top: 0;
     height: 100%;
     z-index: 30;
-    overflow: hidden;
   }
 
   .sidebar__wrap {
@@ -1640,7 +1639,7 @@ body {
   }
 
   .main__sidebar-wrap {
-    overflow: auto;
+    overflow: scroll;
     height: 100%;
   }
 
