--- a/Creatives/less/main.less
+++ b/Creatives/less/main.less
@@ -139,7 +139,7 @@ body{
 	display:flex;
  	flex-direction:column; 	
  	min-height:100vh; 	
- 	padding-bottom:5%; 		
+ 	padding-bottom:10vh; 		
 	text-align: center;
  	background: url(../img/header_fon.jpg) no-repeat top center/ cover;	
 	&__text{
@@ -623,7 +623,7 @@ body{
 				width: 100%;
 				height: 2px;
 				left:0;
-				top:11px;
+				top:9px;
 				transition:all 0.3s ease 0s;				
 			}
 			&.active span{
