--- a/Creatives/css/main.css
+++ b/Creatives/css/main.css
@@ -169,7 +169,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   min-height: 100vh;
-  padding-bottom: 5%;
+  padding-bottom: 10vh;
   text-align: center;
   background: url(../img/header_fon.jpg) no-repeat top center / cover;
 }
@@ -745,7 +745,7 @@ body {
     width: 100%;
     height: 2px;
     left: 0;
-    top: 11px;
+    top: 9px;
     -webkit-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
   }
