--- a/Creatives/less/main.less
+++ b/Creatives/less/main.less
@@ -58,7 +58,8 @@ body{
 	-webkit-font-smoothing:antialiased;
 }
 .wrapper{
- 	min-height:100vh; 	
+ 	min-height:100vh;
+ 	overflow:hidden; 	
 } 
 .container{
 	max-width:1200px;
