--- a/Creatives/less/main.less
+++ b/Creatives/less/main.less
@@ -142,7 +142,7 @@ body{
  	min-height:100vh; 	
  	padding-bottom:10vh; 		
 	text-align: center;
- 	background: url(../img/header_fon.jpg) no-repeat top center/ cover;	
+ 	background: #41403e url(../img/header_fon.jpg) no-repeat top center/ cover;	
 	&__text{
 		padding-top:40vh;				
 		text-transform:uppercase;
