--- a/Greenshop/css/main.css
+++ b/Greenshop/css/main.css
@@ -1721,6 +1721,9 @@ body {
     padding: 15px 15px 0 15px;
     text-align: center;
   }
+  .care__item:not(:first-child) {
+    border-left: none;
+  }
   .care__img-wrap {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
