--- a/Unvent/sass/main.scss
+++ b/Unvent/sass/main.scss
@@ -1,4 +1,6 @@
 $main-color-text: #282728;
+$main-color-hover: #ff544f;
+$main-color-theme: #ff544f;
 @mixin fl {
 	display: flex;
 	align-items: center;
@@ -59,8 +61,38 @@ body {
 	padding: 0 0.78rem;
 	margin: 0 auto;
 }
+.btn {
+	position: relative;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	color: #fff;
+	font-weight: 700;
+	border-radius: 0.42rem;
+	overflow: hidden;
+	transition: all 0.2s ease-in-out;
+	&::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 1.7rem;
+		height: 100%;
+		background-color: rgba(#fff, 0.7);
+		animation: light-blick 2s infinite;
+	}
+}
+@keyframes light-blick {
+	from {
+		transform: translate(-4rem) skewX(-45deg);
+	}
+	to {
+		transform: translate(25rem) skewX(-45deg);
+	}
+}
 .header {
-	background: url(../img/bgm.png) no-repeat center;
+	background: url(../img/bg.jpg) no-repeat center;
 	background-size: cover;
 	padding: 2rem 0 5.31rem 0;
 	&__top {
@@ -71,62 +103,79 @@ body {
 			margin: 0.6rem 0;
 		}
 	}
-
 	&__top-slogan {
 		width: 16.92rem;
-		font-size: 0.94rem;
+		font-size: 0.92rem;
 		padding-left: 1.82rem;
 	}
-
+	&__where-wrap {
+		transition: color 0.3s ease-in-out;
+		cursor: pointer;
+		&:hover {
+			color: $main-color-hover;
+		}
+		&:hover .header__top-map {
+			transform: scale(1.2);
+		}
+	}
 	&__top-where {
 		@include fl;
 	}
-
 	&__top-map {
 		width: 3.96rem;
 		height: auto;
+		transition: all 0.3s ease-in-out;
 	}
-
 	&__top-address {
 		font-size: 0.8333rem;
 		line-height: 130%;
 		padding-left: 1.04rem;
 	}
-
+	&__address-link {
+		display: block;
+		color: $main-color-hover;
+		text-decoration: underline;
+	}
 	&__top-consultation {
 		font-size: 0.8333rem;
-		padding: 1.56rem;
+		padding: 1.2rem 1.7rem;
 		background-color: #313d4b;
+		&:hover {
+			box-shadow: 0px 0px 25px #313d4b;
+		}
 	}
-
 	&__top-contacts {
 	}
 
 	&__top-tel {
 		@include fl;
+		&:hover .header__top-number {
+			color: $main-color-hover;
+		}
 	}
-
 	&__top-number {
 		font-size: 1.15rem;
 		color: inherit;
+		transition: color 0.2s ease-in-out;
 	}
-
 	&__social {
 		@include fl;
 		margin-top: 0.52rem;
 	}
-
 	&__social-item {
 		&:not(:first-child) {
 			margin-left: 0.52rem;
 		}
 	}
-
 	&__social-link {
 		@include fl;
 		width: 2.6rem;
 		height: 2.6rem;
 		border-radius: 50%;
+		transition: all 0.2s ease-in-out;
+		&:hover {
+			transform: scale(1.2);
+		}
 	}
 	.vb-bg {
 		background-color: #7460f3;
@@ -143,6 +192,11 @@ body {
 
 	&__nav-item {
 	}
+	&__nav-list {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
 
 	&__nav-link {
 		font-size: 0.8333rem;
@@ -151,10 +205,14 @@ body {
 		text-transform: uppercase;
 		padding: 0.6rem 0.78rem;
 		letter-spacing: 0.05rem;
+		transition: all 0.3s ease-in-out;
+		&:hover {
+			color: #ff544f;
+		}
 	}
 
 	&__content {
-		margin-top: 5rem;
+		margin-top: 4.5rem;
 		width: 45.3rem;
 	}
 
@@ -168,14 +226,14 @@ body {
 	&__content-wrap {
 		display: flex;
 		justify-content: space-between;
-		margin-top: 3.8rem;
+		margin-top: 2.9rem;
 	}
 
 	&__content-advantage {
 		display: flex;
 		align-items: flex-start;
 		position: relative;
-		padding: 0.89rem 0 0.89rem 1.67rem;
+		padding: 0.89rem 0 0.89rem 1.5rem;
 		&:not(:last-child) {
 			padding-right: 2.5rem;
 		}
@@ -214,7 +272,7 @@ body {
 	&__content-tools {
 		display: flex;
 		justify-content: space-between;
-		margin-top: 2.76rem;
+		margin-top: 1.8rem;
 	}
 
 	&__calc {
@@ -234,6 +292,9 @@ body {
 		font-size: 0.89rem;
 		line-height: 140%;
 		text-transform: uppercase;
+		&:hover {
+			box-shadow: 0px 10px 25px $main-color-hover;
+		}
 	}
 
 	&__calc-text {
@@ -251,7 +312,7 @@ body {
 		font-size: 0.885rem;
 		font-weight: 700;
 	}
-
+	//Настройка Slick-slider
 	&__slider {
 		min-width: 0;
 		position: relative;
@@ -269,15 +330,15 @@ body {
 
 			&.slick-prev {
 				left: 0;
-				background: url(../img/leftarrow.png) center / cover no-repeat;
+				background: url(../img/leftarrow.png) 0% 50% / contain no-repeat;
 			}
 			&.slick-next {
 				right: 0;
-				background: url(../img/rightarrow.png) center / cover no-repeat;
+				background: url(../img/rightarrow.png) 100% 50% / contain no-repeat;
 			}
 		}
 	}
-	//Настройка Slick-slider
+
 	.slick-track {
 		display: flex;
 	}
@@ -288,9 +349,8 @@ body {
 	&__slider-item {
 		width: 4.17rem;
 		padding: 0 0.625rem;
+		cursor: pointer;
 	}
-}
-.container {
 }
 .logo {
 	width: 9.74rem;
@@ -306,30 +366,13 @@ body {
 }
 .map-img {
 	width: 100%;
-	border: 0.052rem solid #d9d9d9;
 	border-radius: 50%;
 }
 .social-img {
 	width: 1vw;
 }
-.btn {
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	color: #fff;
-	font-weight: 700;
-	border-radius: 0.42rem;
-}
 .tel-img {
 	width: 0.8333rem;
-}
-.hader {
-	&__nav-list {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-	}
 }
 .bold-text {
 	font-family: "UniNeue";
@@ -346,3 +389,98 @@ body {
 .slider-img {
 	width: 100%;
 }
+.lock {
+	overflow: hidden;
+}
+.map-popup {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 30;
+	background-color: rgba(0, 0, 0, 0.8);
+	opacity: 0;
+	visibility: hidden;
+	overflow-y: auto;
+	overflow-x: hidden;
+	&.open {
+		visibility: visible;
+		opacity: 1;
+	}
+	&__main {
+		position: relative;
+		min-height: 100vh;
+		align-items: center;
+		justify-content: center;
+		&.open {
+			display: flex;
+		}
+	}
+	&__content {
+		width: 90%;
+		height: 70vh;
+		opacity: 0;
+		visibility: hidden;
+		transition: all 0.5s ease-in-out;
+		transform: perspective(600px) translate(0, -100%) rotateX(45deg);
+		&.open {
+			transform: perspective(600px) translate(0, 0) rotateX(0deg);
+			visibility: visible;
+			opacity: 1;
+		}
+	}
+}
+.close-popup {
+	position: fixed;
+	top: 1rem;
+	right: 1rem;
+	width: 30px;
+	height: 20px;
+	cursor: pointer;
+	transition: background-color 0.3s ease-in-out;
+	&:hover::after,
+	&:hover::before {
+		background-color: $main-color-hover;
+	}
+	&::after,
+	&::before {
+		position: absolute;
+		content: "";
+		width: 100%;
+		height: 4px;
+		background-color: #fff;
+	}
+	&::after {
+		bottom: 8px;
+		transform: rotate(-45deg);
+	}
+	&::before {
+		top: 8px;
+		transform: rotate(45deg);
+	}
+}
+/*
+.cert-popup {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 30;
+	background-color: rgba(0, 0, 0, 0.8);
+	&__body {
+		@include fl;
+		min-height: 100vh;
+		padding: 2rem 1rem;
+	}
+	&__content {
+		max-width: 90rem;
+	}
+	&__img {
+		width: 100%;
+		height: 100%;
+	}
+}
+*/
+
