--- a/Unvent/css/main.css
+++ b/Unvent/css/main.css
@@ -582,6 +582,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 2rem;
 }
 
 .map-popup__main.open {
@@ -592,7 +593,7 @@ body {
 
 .map-popup__content {
   width: 100%;
-  height: 100%;
+  height: 70%;
   opacity: 0;
   visibility: hidden;
   -webkit-transition: all 0.5s ease-in-out;
