--- a/Unvent/sass/main.scss
+++ b/Unvent/sass/main.scss
@@ -403,13 +403,14 @@ body {
 		min-height: 100%;
 		align-items: center;
 		justify-content: center;
+		padding: 2rem;
 		&.open {
 			display: flex;
 		}
 	}
 	&__content {
 		width: 100%;
-		height: 100%;
+		height: 70%;
 		opacity: 0;
 		visibility: hidden;
 		transition: all 0.5s ease-in-out;
