--- a/Unvent/sass/main.scss
+++ b/Unvent/sass/main.scss
@@ -403,7 +403,7 @@ body {
 		min-height: 100%;
 		align-items: center;
 		justify-content: center;
-		padding: 2rem;
+		padding: 3rem 0;
 		&.open {
 			display: flex;
 		}
